--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^17.2.0",
     "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
