--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "dd-trace": "^5.59.0",
     "dotenv": "^17.2.0",
+    "nestjs-ddtrace": "^6.0.0",
+    "nestjs-pino": "^4.4.0",
     "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
