--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - DD_AGENT_HOST=datadog-agent
     volumes:
       - ./env:/app/env:ro
-      - roman-numeral-logs:/app/logs
+      - roman-numeral-logs:/tmp/roman-numeral-service
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
@@ -49,7 +49,7 @@ services:
       - /proc/:/host/proc/:ro
       - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - roman-numeral-logs:/var/log/roman-numeral-service:ro
+      - roman-numeral-logs:/tmp/roman-numeral-service:ro
       - ./datadog.yaml:/etc/datadog-agent/datadog.yaml:ro
       - ./conf.d:/etc/datadog-agent/conf.d:ro
     ports:
